fix: overlap with hero block + added 'narrow' style

--- a/blocks/collapsible/collapsible.css
+++ b/blocks/collapsible/collapsible.css
@@ -80,3 +80,16 @@
     margin-block-end: 1em;
     text-align: left;
 }
+
+.section.arc-after-section.collapsible-container {
+    margin-top: 0;
+}
+
+.collapsible-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.collapsible.narrow {
+    max-width: 610px;
+}
